page 71: repeated words detection example

--- a/programming_principles_and_practices_using_cpp/78_TRY_THIS_assignment_and_initialization/.vscode/launch.json
+++ b/programming_principles_and_practices_using_cpp/78_TRY_THIS_assignment_and_initialization/.vscode/launch.json
@@ -8,7 +8,7 @@
         "name": "(gdb) Launch",
         "type": "cppdbg",
         "request": "launch",
-        "program": "${workspaceFolder}/word_detector.exe",
+        "program": "${workspaceFolder}/hello_world.exe",
         "args": [],
         "stopAtEntry": true,
         "cwd": "${workspaceFolder}",
