--- a/programming_principles_and_practices_using_cpp/71_TRY_THIS_assignment_and_initialization/.vscode/tasks.json
+++ b/programming_principles_and_practices_using_cpp/71_TRY_THIS_assignment_and_initialization/.vscode/tasks.json
@@ -4,10 +4,10 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "build hello world",
+            "label": "build word detector",
             "type": "shell",
             "command": "g++",
-            "args": ["-g", "-o", "hello_world", "hello_world.cpp"],
+            "args": ["-g", "-o", "word_detector", "word_detector.cpp"],
             "group": {
                 "kind": "build",
                 "isDefault": true
